footer fix wrap

--- a/assets/styles/Footer.less
+++ b/assets/styles/Footer.less
@@ -1,13 +1,17 @@
 .Footer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-top: auto;
-    padding: 20px 0;
+    padding: 25px 0;
+    margin: 0 10px;
 }
 
 .Footer * {
     display: flex;
+    align-items: center;
+    white-space: nowrap;
     margin: 0 2px;
 }
 
